index.html and recipes/cevap.html and recipes/sarma.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
-    
+<ul>
+   <li><a href="recipes/baklava.html">Honey Baklava</a> </li>
+   <li><a href="recipes/sarma.html">Sarma</a> </li>
+   <li><a href="recipes/cevap.html">Cevap</a></li>
+</ul>
 </body>
 </html>
