index.html and recipes/cevap.html and recipes/sarma.html

--- a/recipes/baklava.html
+++ b/recipes/baklava.html
@@ -8,5 +8,36 @@
 </head>
 <body>
     <h1>Baklava</h1>
+    <img src="img/baklava.jpg" alt="Baklava" width="75">
+
+    <h2>Description</h2>
+
+    <p>Baklava s a layered pastry dessert made of filo pastry, filled with chopped nuts, and sweetened with syrup or honey. 
+    It was one of the most popular sweet pastries of Ottoman cuisine.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 cup of water</li>
+        <li>1 cup of sugar</li>
+        <li>1/2 cup honey</li>
+        <li>2 tabelspoons lemon juice</li>
+        <li>1 cinammon stick</li>
+        </ul>
+    <h2>How to make BAKLAVA</h2>
+    <ol>
+        <li>Thaw phyllo dough according to package instructions
+         (this is best done overnight in the fridge, then place it on the counter for 1 hour before starting your recipe to bring it to room temp).</li>
+         <li>Trim phyllo dough to fit your baking sheet. My phyllo dough package had 2 rolls with a total of 40 sheets that measured 9×14 so I had to trim them slightly.
+         You can trim one stack at a time then cover with a damp towel to keep from drying out.</li>
+         <li> Butter the bottom and sides of a 13×9 non-stick baking pan.</li>
+         <li>Bake</li>
+         <li>Cut</li>
+    </ol>
+
+
+
+
+
+
+
 </body>
 </html>
