--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="recipes/img/dog.jpg" alt="POWER OF FRENDSHIP" width="100">
 <ul>
    <li><a href="recipes/baklava.html">Baklava</a> </li>
-   <li><a href="recipes/sarma.html">Sarma</a> </li>
    <li><a href="recipes/cevap.html">Cevap</a></li>
 </ul>
 </body>
