--- a/recipes/cevap.html
+++ b/recipes/cevap.html
@@ -8,6 +8,36 @@
 </head>
 <body>
     <h1>Cevap</h1>
-    
+    <img src="img/cevap.jpg" alt="Cevap" width="75">
+
+    <h2>Description</h2>
+    <p>Cevapi, or Cevapcici, are homemade sausages traditional of the Balkans area. This delicious street food made with mixed meats,
+     is perfect for a party in your garden: tasty and easy to prepare thanks to simple ingredients</p>
+    <p>The Serbian Journalist and Novelist Branislav Nušić (1864-1938) affirmed that the Cevapi was an idea of a man called Zivko,
+     owner of a family restaurant in Belgrade. In 1860, Zivko shaped the mixture of the Pljeskavica - the traditional Serbian hamburger - into a Kofta Keba</p>
+
+     <h2>Ingredients</h2>
+<ul>
+    <li>1 part ground lamb</li>
+    <li>1 part pork</li>
+    <li>1 part beef</li>
+    <li>1 part paprika</li>
+    <li>1 part baking soda</li>
+    </ul>
+
+    <h2>How to make Cevapi</h2>
+    <ol>
+        <li>Roll them into little sasauges</li>
+        <li>Put some salt</li>
+        <li>Cevapi can be baked on any surface, but barbecue is the best option</li>
+        <li>Turn on, use a bit of oil, wait for tempreature to be high enough and put them on barbecue</li>
+        <li>Cevapi will slowly get brown color, after 10 minutes or more, take them off</li>
+        <li>Garnish with onion, bread and cream cheese</li>
+        <li>Enjoy!!</li>
+    </ol>
+<div>
+    <a href="../index.html">Home</a>
+</div>
+
 </body>
 </html>
