index.html and recipes/baklava.html and recipes/cevap.html

--- a/recipes/baklava.html
+++ b/recipes/baklava.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Baklava</h1>
-    <img src="img/baklava.jpg" alt="Baklava" width="400">
+    <img src="img/baklava.jpg" alt="Baklava" width="400ggg">
 
     <h2>Description</h2>
 
