--- a/recipes/cevap.html
+++ b/recipes/cevap.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
+    <style>
+        .second {background-color: green;
+        color: white;
+    font-size: 18px;}
+    </style>
 </head>
 <body>
     <h1>Cevap</h1>
     <img src="img/cevap.jpg" alt="Cevap" width="400">
-
+<div class="firstassigment">
     <h2>Description</h2>
-    <p>Cevapi, or Cevapcici, are homemade sausages traditional of the Balkans area. This delicious street food made with mixed meats,
+    <p>Cevapi, or Cevapcici, are homemade sausages traditional of the Balkans area. This delicious street food made with mixed meatbs,
      is perfect for a party in your garden: tasty and easy to prepare thanks to simple ingredients</p>
-    <p>The Serbian Journalist and Novelist Branislav Nušić (1864-1938) affirmed that the Cevapi was an idea of a man called Zivko,
+    <p class="second">The Serbian Journalist and Novelist Branislav Nušić (1864-1938) affirmed that the Cevapi was an idea of a man called Zivko,
      owner of a family restaurant in Belgrade. In 1860, Zivko shaped the mixture of the Pljeskavica - the traditional Serbian hamburger - into a Kofta Keba</p>
-
+</div>
      <h2>Ingredients</h2>
 <ul>
     <li>1 part ground lamb</li>
@@ -25,7 +31,8 @@
     <li>1 part baking soda</li>
     </ul>
 
-    <h2>How to make Cevapi</h2>
+  <button style="background-color: orange; color: white;" > Click me for fun </button> 
+  <h2>How to make Cevapi</h2>
     <ol>
         <li>Roll them into little sasauges</li>
         <li>Put some salt</li>
